--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#6699FF</color>
+    <color name="colorPrimaryDark">#6699ff</color>
+    <!--<color name="colorPrimaryDark">#6095fd</color>-->
+    <color name="colorAccent">#CDDC39</color>
+    <color name="colorPrimaryLight">#B3E5FC</color>
+    <color name="colorDivider">#BDBDBD</color>
+    <color name="textPrimary">#212121</color>
+    <color name="textSecondary">#757575</color>
+    <color name="textOrIcons">#FFF</color>
 </resources>
